[package]
name = "egui_winit_vulkano"
version = "0.27.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2021"
description = "Egui immediate mode gui integration with winit and Vulkano"
homepage = "https://github.com/hakolao/egui_winit_vulkano"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hakolao/egui_winit_vulkano"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[features]
default = ["clipboard", "links", "wayland", "x11", "image"]
links = ["egui-winit/links"]
clipboard = ["egui-winit/clipboard"]
wayland = ["egui-winit/wayland"]
x11 = ["egui-winit/x11"]

[dependencies]
ahash = "0.8.11"
egui-winit = { version = "0.28.1", default-features = false }
egui = "0.28.1"
image = { version = "0.25.2", optional = true }
vulkano = "0.34"
vulkano-shaders = "0.34"
winit = { version = "0.29.4", features = ["rwh_05"] }

[dev-dependencies]
cgmath = "0.18.0"
egui_demo_lib = "0.28"
vulkano-util = "0.34"
