[package]
name = "egui_winit_vulkano"
version = "0.27.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2021"
description = "Egui immediate mode gui integration with winit and Vulkano"
homepage = "https://github.com/hakolao/egui_winit_vulkano"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hakolao/egui_winit_vulkano"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[features]
default = ["clipboard", "links", "wayland", "x11", "image"]
links = ["egui-winit/links"]
clipboard = ["egui-winit/clipboard"]
wayland = ["egui-winit/wayland"]
x11 = ["egui-winit/x11"]

[dependencies]
ahash = "0.8.11"
egui-winit = { version = "0.29", default-features = false }
egui = "0.29"
image = { version = "0.25.2", optional = true }
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "4a77d39" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "4a77d39" }
winit = { version = "0.30", default-features = false }
raw-window-handle = "0.6"

[dev-dependencies]
cgmath = "0.18.0"
egui_demo_lib = "0.29"
vulkano-util = "0.34"
